@@ -1,18 +1,30 @@
-## Getting Started
+## Socket
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+# 簡介
 
-## Folder Structure
+利用 socket 製作一個server client端一對一的聊天功能
 
-The workspace contains two folders by default, where:
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
 
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
+## run with server
 
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
 
-## Dependency Management
+```
+java --enable-preview -XX:+ShowCodeDetailsInExceptionMessages -cp .\bin\ ServerCode
 
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+```
+
+## run with server
+
+
+```
+java --enable-preview -XX:+ShowCodeDetailsInExceptionMessages -cp .\bin\ ClientCode
+
+```
+
+## 參考文件
+
+Java Socket連線和傳遞資料 單向 https://oblivious9.pixnet.net/blog/post/74178285
+
+thread run 介紹
+https://codertw.com/%E7%A8%8B%E5%BC%8F%E8%AA%9E%E8%A8%80/308677/
